# delegated

./: .gitignore  AGENT_AUTH_SPEC.md  CHANGELOG.md  Cargo.toml  DELEGATED_SPEC.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml
docs/: INTEGRATION_GUIDE.md  KNOWN_LIMITS.md  OPERATIONS.md  SECURITY_CHECKLIST.md  THREAT_MODEL.md
examples/: axum_server.rs  build_request.rs  eval_benchmark.rs  gen_vectors.rs
schemas/: a2a-trust-envelope.schema.json  agent-identity-document.schema.json  delegation-token.schema.json  issuer-metadata.schema.json  jwks.schema.json  mcp-trust-envelope.schema.json  request-envelope.schema.json  shared-trust-claims.schema.json
scripts/: conformance.sh  external_interop.sh  release_check.sh  verify_release_provenance.sh
src/: audit.rs  client.rs  contracts.rs  control_plane.rs  crypto.rs  delegation_ux.rs  discovery.rs  engine.rs  engine_async.rs  host_context.rs  identity_verifier.rs  issuance.rs  lib.rs  models.rs  policy.rs  policy_trait.rs  profiles.rs  revocation.rs  revocation_async.rs  revocation_redis.rs  stages.rs  stages_async.rs  wire.rs
src/adapters/: a2a.rs  a2a_async.rs  axum_layer.rs  guard.rs  http.rs  http_async.rs  mcp.rs  mcp_async.rs  mod.rs
tests/: conformance.rs  default_runtime_state.rs  external_interop.rs  integration_server.rs  interop_harness.rs  reference_cli.rs  vectors.rs
tests/fixtures/: vectors.json
