[package]
name = "delegated"
version = "0.1.0"
edition = "2024"

[features]
default = []
async = ["dep:async-trait"]
oidc-bridge = []
axum = ["dep:axum", "dep:tower", "async"]
redis = ["dep:redis", "async"]
tracing = ["dep:tracing"]
client = ["dep:reqwest", "async"]
metrics = ["dep:metrics"]

[dependencies]
base64ct = { version = "1.6", features = ["std"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true, default-features = false, features = ["tokio", "http1", "json"] }
tower = { version = "0.4", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
tracing = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
metrics = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "axum_server"
required-features = ["axum"]
