[package]
name = "delegated"
version = "0.1.1"
edition = "2024"
description = "Fail-closed trust evaluation for agentic AI systems — delegation tokens, policy enforcement, and audit for agent-to-agent and human-to-agent workflows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/abendrothj/delegated"
documentation = "https://docs.rs/crate/delegated/latest"
readme = "README.md"
keywords = ["agent", "trust", "delegation", "ai", "security"]
categories = ["authentication", "web-programming", "network-programming"]

[features]
default = []
async = ["dep:async-trait"]
oidc-bridge = []
axum = ["dep:axum", "dep:tower", "dep:http-body-util", "async"]
redis = ["dep:redis", "async"]
tracing = ["dep:tracing"]
client = ["dep:reqwest", "async"]
metrics = ["dep:metrics"]

[dependencies]
base64ct = { version = "1.6", features = ["std"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true, default-features = false, features = ["tokio", "http1", "json"] }
tower = { version = "0.4", optional = true }
http-body-util = { version = "0.1", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
tracing = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
metrics = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
proptest = "1.6"

[[example]]
name = "axum_server"
required-features = ["axum"]

[[test]]
name = "integration_server"
required-features = ["axum", "client"]
